--- a/package.json
+++ b/package.json
@@ -20,9 +20,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.0",
+    "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^12.0.8",
+    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "graphql": "^16.7.1",
+    "mongoose": "^7.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
