--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:auth": "jest --config ./test/jest-e2e.json -- test/auth.e2e-spec.ts" ,
+    "test:auth": "jest --config ./test/jest-e2e.json -- test/auth.e2e-spec.ts",
     "test:trip": "jest --config ./test/jest-e2e.json -- test/trip.e2e-spec.ts"
-
   },
   "dependencies": {
     "@apollo/server": "^4.9.0",
@@ -31,10 +30,12 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
+    "apollo-server-express": "^3.12.0",
     "argon2": "^0.31.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.7.1",
+    "graphql-subscriptions": "^2.0.0",
     "mongoose": "^7.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
