--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:auth": "jest --config ./test/jest-e2e.json -- test/auth.e2e-spec.ts",
-    "test:trip": "jest --config ./test/jest-e2e.json -- test/trip.e2e-spec.ts"
+    "test:trip": "jest --config ./test/jest-e2e.json -- test/trip.e2e-spec.ts" ,
+    "test:note": "jest --config ./test/jest-e2e.json -- test/note.e2e-spec.ts"
+
   },
   "dependencies": {
     "@apollo/server": "^4.9.0",
